--- a/1.Table/Table.html
+++ b/1.Table/Table.html
@@ -10,8 +10,8 @@
 <body>
     <table>
         <tr>
-          <th>Firstname</th>
-          <th>Lastname</th> 
+          <th>First Name</th>
+          <th>Last Name</th> 
           <th>Age</th>
         </tr>
         <tr>
