--- a/2.Tourisum/Tour.html
+++ b/2.Tourisum/Tour.html
@@ -14,7 +14,7 @@
                          <b>WANDER</b>
                                 are lost</h1></pre>
     <div class="div1">
-        <p><b>The world is a book and<br>those are not travel<br>read only one page</b></p>
+        <p><b>The world is a book and<br>those are not travel<br>read only the one page</b></p>
     </div>
     <div class="div2">
         <img scr="logo.png">
