--- a/10.BS 2 Tourisum/BS Tour.html
+++ b/10.BS 2 Tourisum/BS Tour.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-        <div class="container">
+        <div class="container-fluid">
             <h2>Favourite Places</h2>
 
             <div class="row cln m-4 rounded-3">
