--- a/10.BS 1 Food Order/Foodorder.html
+++ b/10.BS 1 Food Order/Foodorder.html
@@ -10,7 +10,7 @@
         <title>Food order page</title>
     </head>
     <body>
-        <div class="card">
+        <div class="card col-lg-4">
             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/foodbg.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Happy Meals</h5>
