--- a/10.BS 1 Food Order/Foodorder.html
+++ b/10.BS 1 Food Order/Foodorder.html
@@ -14,7 +14,7 @@
             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/foodbg.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Happy Meals</h5>
-              <p class="card-text">Discover the best food over the 1,000 resturants</p>
+              <p class="card-text">Discover the best food over the 1,000 resturants.</p>
               <a href="#" class="btn btn-primary">Book Now</a>
             </div>
           </div>
